[project]
name = "codegenagent"
version = "0.1.0"
description = "CodeGenAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
codegenagent = "codegenagent.main:run"
run_crew = "codegenagent.main:run"
train = "codegenagent.main:train"
replay = "codegenagent.main:replay"
test = "codegenagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
