[project]
name = "codereview"
version = "0.1.0"
description = "CodeReview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "streamlit",
    "python-dotenv",
    "pysqlite3-binary",
    "pygments>=2.18.0,<3.0.0"
]

[project.scripts]
codereview = "codereview.main:run"
run_crew = "codereview.main:run"
train = "codereview.main:train"
replay = "codereview.main:replay"
test = "codereview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
